--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+       <!-- preloader -->
+     <div class="preloader">
+        <img src="./img/preloader.gif" alt="preloader">
+    </div>
     <header>
         <div class="menu-btn">
             <span class="menu-btn_burger"></span>
@@ -36,7 +40,6 @@
           </ul>  
         </nav>
     </header>
-
     <main>
         <section class="home">
             <h2>Hi! My Name Is</h2>
